# sfml-game-linux

./: .gitignore  .gitmodules
game1/: CMakeLists.txt  CMakePresets.json  README.md  config.txt  tdd_todo_list.txt
game1/include/vector/: Vector2f.h  vector.h
game1/lib/: CMakeLists.txt
game1/lib/googletest/: CMakeLists.txt
game1/lib/sfml/: CMakeLists.txt
game1/src/: CMakeLists.txt  ComponentManager.h  ConfigParser.cpp  ConfigParser.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Scene.cpp  Scene.h  Vector2f.cpp  components.hpp  config.txt  main.cpp  typedefs.h  vector.cpp
game1/src/include/: vector.h
game1/test/: CMakeLists.txt  main_test.cpp  vector_test.cpp
game1/test/vector_test/vector_addition_test/: CMakeLists.txt  vector_addition_test.cpp
game1/test/vector_test/vector_comparement_test/: CMakeLists.txt  vector_comparement_test.cpp
game1/test/vector_test/vector_multiplication_test/: CMakeLists.txt  vector_multiplication_test.cpp
game1/test/vector_test/vector_negation_test/: CMakeLists.txt  vector_negation_test.cpp
game1/test/vector_test/vector_substraction_test/: CMakeLists.txt  vector_substraction_test.cpp
game2/: CMakeLists.txt  CMakePresets.json  tdd_todo_list.txt
game2/include/vector/: Vector2f.h
game2/src/: Action.hpp  CMakeLists.txt  Components.hpp  ConfigParser.cpp  Entity.cpp  Entity.h  EntityManager.cpp  GameEngine.cpp  GameEngine.h  Scene.cpp  Scene.h  SceneLevel.cpp  SceneLevel.h  SceneMenu.cpp  SceneMenu.h  ScenePlay.cpp  ScenePlay.h  Vector2f.cpp  main.cpp  typedefs.h
